# 二叉树遍历
add_executable(BinaryTree BinaryTree/binaryTree.c BinaryTree/binaryTree.h BinaryTree/main.c)

# 二叉搜索树
add_executable(BSTree BinarySearchTree/binarySearchTree.c BinarySearchTree/binarySearchTree.h BinarySearchTree/main.c)

# 平衡二叉树
add_executable(AVLTree AVLTree/avlTree.c AVLTree/avlTree.h AVLTree/main.c)

# 红黑树
add_executable(RBTree RedBlackTree/rbTree.c RedBlackTree/rbTree.h RedBlackTree/main.c)
